syntax = "proto3";

option csharp_namespace = "GrpcAgent2";

package GrpcAgent2;


service Publisher{
  rpc PublishMessage (PublisherRequest) returns (PublisherReply);
}

message PublisherRequest {
  string topic = 1;
  string content = 2;
}

message PublisherReply {
  bool isSuccessed = 1;
}